--- a/package.json
+++ b/package.json
@@ -14,7 +14,8 @@
   },
   "dependencies": {
     "jose": "^6.1.3",
-    "vue": "^3.4.0"
+    "vue": "^3.4.0",
+    "vue-draggable-plus": "^0.5.6"
   },
   "devDependencies": {
     "@crxjs/vite-plugin": "^2.0.0",
